--- a/xlx/dh.html
+++ b/xlx/dh.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<title>导航</title>
 	<style>
-	*{margin: 0;padding: 0}
+        body,div,dl,dd,ul,li,h2,dt{margin: 0;padding: 0}
+	body{font-family: "微软雅黑";font-size: 16px;}
 	li{list-style: none;}
 	a{text-decoration: none;}
 	a{color:#fff;font-weight: bold;}
