--- a/xlx/gd.html
+++ b/xlx/gd.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<title>无逢滚动</title>
 	<style>
-	*{margin: 0;padding:0;}
+	body,div,p,h1{margin: 0;padding:0;}
+	body{font-weight: "微软雅黑";font-size: 16px;}
 	#box{width: 400px;height: 300px;border: 4px solid #999;margin: 0 auto;}
 	#title{width: 400px;height: 50px;background: blue;}
 	#title h1{width: 400px;height: 50px;text-align: center;line-height: 50px;color: red;}
