--- a/xlx/index.html
+++ b/xlx/index.html
@@ -5,7 +5,8 @@
 	<title>小练习</title>
 </head>
 <style>
-	*{margin:0;padding: 0}
+	body,div,h1,ul,li{margin:0;padding: 0}
+	body{font-size: 16px;font-family: "微软雅黑"}
 	li{list-style: none;}
 	a{color:#fff;}
 	div{width: 400px;height: 360px;background: red;margin: 0 auto;}
