选项卡切换

--- a/xlx/qh.html
+++ b/xlx/qh.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<title>选项卡切换</title>
 	<style>
-	*{margin: 0;padding: 0}
+	body,div,ul,li{margin: 0;padding: 0}
+	body{font-family: "微软雅黑";font-size: 16px;}
 	ul li{width: 60px;height: 25px;float: left;list-style: none;margin-left: 10px;border: 1px solid #999;border-bottom: none;text-align: center;line-height: 25px;position: relative;top: 3px;}
 	.on{background: #fff;position: relative;top:2px;border-top: 4px solid #999;}
 
